fixed margins for info container on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,9 @@ body {
             background-color: #C68866;
             width: 500px;
             margin: 0 auto;
-            // margin-top: 20px;
+            @media (max-width: $breakpoint-tablet) {
+                margin-top:20px;
+            }
 
             h1 {
                 text-align: center;
